sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:20: error: type mismatch;
 found   : Unit
 required: Boolean
        if (a=true){
             ^